tests/compile_fail/resolver_undefined_identifier.stderr
error: Undefined identifier "meters".
  --> tests/compile_fail/resolver_undefined_identifier.rs:10:32
   |
10 |     unit kilometers = 1000.0 * meters,
   |                                ^^^^^^
